fixed alignment issue on bottom menu and updated about page with ngIfs for different pages.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -28,6 +28,7 @@ body {
 .topMenu {
     margin-left: 1%;
     margin-right: 1%;
+    padding: 0;
     cursor: pointer;
     font-size: x-large;
 }
@@ -70,10 +71,9 @@ body {
     }
 }
 
-.topMenu2 {
-    margin-left: 2%;
-    margin-right: 2%;
-
+    .topMenu2 {
+        margin-left: 2%;
+        margin-right: 2%;
 
 }
 
@@ -99,12 +99,11 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: -0px 5px 10px #888888;"
-
 }
 
 .back-to-top:hover {
